Archive2/69/be21be4787770c/output
main.cpp:8:19: error: 'flowFile' declared as function returning an array
 string2d flowFile() {
                   ^
